{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 255,
  "lineage": "4e8bfb6f-542f-e860-4b3b-52aa5fd2f433",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0608f2c0fe3810ec3",
            "arn": "arn:aws:ec2:us-east-1:992382648376:elastic-ip/eipalloc-0608f2c0fe3810ec3",
            "domain": "vpc",
            "id": "eipalloc-0608f2c0fe3810ec3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-86-65-49.compute-1.amazonaws.com",
            "public_ip": "54.86.65.49",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-internet-gateway"
            },
            "tags_all": {
              "Name": "eip-internet-gateway"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07543813a68cc4fe9",
            "arn": "arn:aws:ec2:us-east-1:992382648376:instance/i-0336dbcf13b802516",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0336dbcf13b802516",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyAWSKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-081ecbf227d7d0024",
            "private_dns": "ip-10-0-101-189.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.189",
            "public_ip": "3.85.123.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04e11c4c52e6166b9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0173138f81d40b96c",
              "sg-0a1da58ba2a98673d",
              "sg-0acb7ee77381f1e91"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e48875705e84e161",
            "tags": {
              "Name": "Ubuntu EC2 Server"
            },
            "tags_all": {
              "Name": "Ubuntu EC2 Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0173138f81d40b96c",
              "sg-0a1da58ba2a98673d",
              "sg-0acb7ee77381f1e91"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated",
            "aws_security_group.ingress-ssh",
            "aws_security_group.vpc-ping",
            "aws_security_group.vpc-web",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.aws_region.current",
            "local_file.private_key_pem",
            "tls_private_key.generated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382648376:internet-gateway/igw-06bf4f67113730324",
            "id": "igw-06bf4f67113730324",
            "owner_id": "992382648376",
            "tags": {
              "Name": "my-internet-gateway"
            },
            "tags_all": {
              "Name": "my-internet-gateway"
            },
            "vpc_id": "vpc-0022c889ebcaeffe2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0608f2c0fe3810ec3",
            "association_id": "eipassoc-00553ab85ffa00511",
            "connectivity_type": "public",
            "id": "nat-0cb548715abe89a25",
            "network_interface_id": "eni-0b928ae6777e713f3",
            "private_ip": "10.0.101.251",
            "public_ip": "54.86.65.49",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e48875705e84e161",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382648376:route-table/rtb-048e2bcbcf052cbfe",
            "id": "rtb-048e2bcbcf052cbfe",
            "owner_id": "992382648376",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cb548715abe89a25",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "private-route-table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0022c889ebcaeffe2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382648376:route-table/rtb-0791c01952e202c40",
            "id": "rtb-0791c01952e202c40",
            "owner_id": "992382648376",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06bf4f67113730324",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "public-route-table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0022c889ebcaeffe2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382648376:security-group/sg-0a1da58ba2a98673d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1da58ba2a98673d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all-ssh",
            "name_prefix": "",
            "owner_id": "992382648376",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0022c889ebcaeffe2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382648376:security-group/sg-0173138f81d40b96c",
            "description": "ICMP for Ping Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outboun",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0173138f81d40b96c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP Traffic",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "vpc-ping",
            "name_prefix": "",
            "owner_id": "992382648376",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0022c889ebcaeffe2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382648376:security-group/sg-0acb7ee77381f1e91",
            "description": "Web Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acb7ee77381f1e91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc-web-default",
            "name_prefix": "",
            "owner_id": "992382648376",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0022c889ebcaeffe2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382648376:subnet/subnet-0fd499970681193ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd499970681193ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382648376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "private_subnet_1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0022c889ebcaeffe2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": "private_subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382648376:subnet/subnet-06fe8b05c727d0bf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fe8b05c727d0bf6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382648376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "private_subnet_2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0022c889ebcaeffe2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": "private_subnet_3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382648376:subnet/subnet-0a42e1027cc14ce73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a42e1027cc14ce73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382648376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_3",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "private_subnet_3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0022c889ebcaeffe2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382648376:subnet/subnet-0e48875705e84e161",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e48875705e84e161",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382648376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "public_subnet_1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0022c889ebcaeffe2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": "public_subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382648376:subnet/subnet-01aa997e6055747b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01aa997e6055747b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382648376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "public_subnet_2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0022c889ebcaeffe2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": "public_subnet_3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382648376:subnet/subnet-0ee8860da13721137",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee8860da13721137",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382648376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_3",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "public_subnet_3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0022c889ebcaeffe2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "variables-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382648376:subnet/subnet-0b7e14ae32e82c6b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7e14ae32e82c6b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382648376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-variables-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "sub-variables-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0022c889ebcaeffe2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382648376:vpc/vpc-0022c889ebcaeffe2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05937a01cf2a6fcf2",
            "default_route_table_id": "rtb-00683b41f9bfea5f8",
            "default_security_group_id": "sg-06b31b6126d3b289d",
            "dhcp_options_id": "dopt-0fc4bc196ae1adf00",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0022c889ebcaeffe2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00683b41f9bfea5f8",
            "owner_id": "992382648376",
            "tags": {
              "Environment": "demo_environment",
              "Name": "var.vpc_name",
              "Region": "us-east-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo_environment",
              "Name": "var.vpc_name",
              "Region": "us-east-1",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_region.current"
          ]
        }
      ]
    }
  ]
}